# architect-worldcup

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  config.yaml  pyproject.toml  session-log.md
.github/workflows/: ci.yml
data/llm/: README.md  knockout_fixtures_2026.csv  national_sources_2026-06-25.csv  national_sources_2026-06-28.csv
data/squad_values/: README.md  squad_values_2026-06-10.csv
data/tournament/: README.md  r32_thirdplace_assignment_2026.csv  wc2026_groups_2026-06-10.csv
outputs/llm/: dossier_GROUP_match64_asof2026-06-25.json  dossier_R32_match83_asof2026-07-02.json  dossier_R32_match84_asof2026-07-02.json  prediction_a_R32_match83_asof2026-07-02.json  prediction_a_R32_match84_asof2026-07-02.json  prediction_b_R32_match83_asof2026-07-02.json  prediction_b_R32_match84_asof2026-07-02.json  prediction_c_R32_match83_asof2026-07-02.json  prediction_c_R32_match84_asof2026-07-02.json  summary_R32_match83_asof2026-07-02.md  summary_R32_match84_asof2026-07-02.md
schema/: llm_dossier.schema.json  llm_prediction_a.schema.json  llm_prediction_b.schema.json  llm_prediction_c.schema.json  prediction_a.schema.json  prediction_b.schema.json  prediction_b_output.schema.json  prediction_c.schema.json  prediction_c_output.schema.json  predictions.schema.json
src/architect_wc/: __init__.py  ablation.py  artifact.py  audit.py  calibrate.py  ensemble.py  ingest.py  model.py  pipeline.py  ratings.py  simulate.py  squad.py
src/architect_wc/llm/: __init__.py  anchor.py  coverage.py  fixtures.py  live.py  model_call.py  prediction_a.py  prediction_b.py  quarantine.py  reconcile_c.py  research.py  rounds.py  schemas.py  score_llm.py  smoke.py  validity.py  weights.py
tests/: test_ablation_gate.py  test_anchor_gate.py  test_audit_gate.py  test_calibrate_gate.py  test_ensemble_gate.py  test_independence_gate.py  test_ingest_no_leakage.py  test_llm_coverage_gate.py  test_llm_forward_only_gate.py  test_llm_live_gate.py  test_llm_prediction_a_determinism_gate.py  test_llm_prediction_a_gate.py  test_llm_quarantine_gate.py  test_llm_research_gate.py  test_llm_schema_gate.py  test_llm_score_gate.py  test_model_call_gate.py  test_model_gate.py  test_prediction_b_gate.py  test_prediction_c_gate.py  test_ratings_sanity.py  test_schema.py  test_simulate_gate.py  test_squad_gate.py  test_walk_forward_gate.py
tests/llm/: test_b_coherence.py
