[project]
name = "architect-worldcup"
version = "0.0.0"
description = "Live World Cup 2026 bracket re-simulator with a verification-first architecture."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Hasan Youssef" }]
dependencies = [
    "penaltyblog",
    "pandas",
    "numpy",
    "pyyaml",
    "jsonschema",
]

[project.scripts]
wc-predict = "architect_wc.pipeline:main"
wc-calibrate = "architect_wc.pipeline:calibrate_main"
wc-ablate = "architect_wc.pipeline:ablation_main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architect_wc"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import the package from src directly so the verification gate does not depend
# on the editable install state.
pythonpath = ["src"]
