[project]
name = "architect-worldcup"
version = "0.1.0"
description = "Live World Cup 2026 bracket re-simulator with a verification-first architecture."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Hasan Youssef" }]
dependencies = [
    "penaltyblog",
    "pandas",
    "numpy",
    "pyyaml",
    "jsonschema",
    "scikit-learn>=1.9.0",
    "anthropic",
]

[project.scripts]
wc-predict = "architect_wc.pipeline:main"
wc-forecast-live = "architect_wc.pipeline:live_forecast_main"
wc-calibrate = "architect_wc.pipeline:calibrate_main"
wc-ablate = "architect_wc.pipeline:ablation_main"
wc-walk-backtest = "architect_wc.pipeline:walk_backtest_main"
wc-audit = "architect_wc.pipeline:audit_main"
wc-ensemble = "architect_wc.pipeline:ensemble_main"
wc-llm-smoke = "architect_wc.pipeline:llm_smoke_main"
wc-llm-live = "architect_wc.pipeline:llm_live_main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architect_wc"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import the package from src directly so the verification gate does not depend
# on the editable install state.
pythonpath = ["src"]
